--- a/club44.html
+++ b/club44.html
@@ -14,7 +14,7 @@
 Idaho Statesman October 22, 1949
 <br><br>
 
-<img src="club44add.JPG" alt="" width="100%" height="100%"/>
+<img src="club44add.jpg" alt="" width="100%" height="100%"/>
  
 
 
