--- a/firstadd.html
+++ b/firstadd.html
@@ -11,7 +11,7 @@ Idaho Statesman September 2, 1949
 
 <br><br>
 
-<img src="sept249.jpg" alt="" width="100%" height="100%" />
+<img src="sept249.JPG" alt="" width="100%" height="100%" />
  
 
 
