--- a/crowpic.html
+++ b/crowpic.html
@@ -14,7 +14,7 @@
 Idaho Statesman October 7, 2016
 <br><br>
 
-<img src="crowpic2.jpg" alt="" width="100%" height="100%"/>
+<img src="crowpic2.JPG" alt="" width="100%" height="100%"/>
  
 Last call at Ben's Crow Inn<br><br>
 
